# misc

./: README.md
aaaa/: magpo.py
captive-be-gone/: CDWiFi.sh  WIFIonICE.sh  hospitality.thecloud.eu.py  m34.py  m3connect.sh  minisurvey.txt  wifipass.py
cover/: CAVEAT.md  cover.py
dotfiles/: screenrc  xmonad.hs
dsp/demix/: demix.py
emacs/: highlight-iptables.el
haskell/comprviz/: GzipViz.hs
haskell/comprviz/examples/: viz.html
haskell/cyk/: Main.hs
haskell/editdistviz/: EditDistViz.hs
js/: jitsi_clientside_hacks.md
raspi/: irpoll.c
rust/dupes/: Cargo.toml
rust/dupes/src/: main.rs
rust/ecc_test/: Cargo.toml
rust/ecc_test/tests/: dalek.rs
rust/noisetokio/: Cargo.toml
rust/noisetokio/src/: main.rs
rust/ot_poc/: Cargo.toml
rust/ot_poc/src/: lib.rs  main.rs
rust/ot_poc/tests/: clisrv.rs
satsolver/: Makefile  README.md  sat.c
scheme/: wb.scm
tinform/: Makefile  letter.pbm  maze.pbm  tinflat.c  tinform.c
tinform/examples/: 0000.c  0001.c  0002.c
torx/: CheckExit.py
yourprobes/: prepoui.py  tea.py
