[package]
name = "dupes"
version = "0.1.0"
authors = ["fnordomat <46D46D1246803312401472B5A7427E237B7908CA>"]
edition = "2018"

[dependencies]
walkdir = "2"
clap = "*"
sha2 = "*"
# TODO recompile with debug and release
# seems like a lot of recursive dependencies for simple sha256
# ring = "*"
regex = "1"
