[package]
name = "noisetokio"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio        = { version = "0.2", features = ["full"] }
snow         = { version = "0.7.1", features = ["pqclean_kyber1024", "hfs"] }
futures      = { version = "0.3.*" }
clap         = { version = "2.33.3" }
anyhow       = { version = "1.0.32" }
lazy_static  = { version = "1.4.0" }
