[package]
name    = "ot_poc"
version = "0.0.1"
authors = ["fnordomat <46D46D1246803312401472B5A7427E237B7908CA>"]
edition = "2018"
publish = false

[dependencies]
log       = "0.4.6"
simplelog = "0.6.0"
openssl   = "0.10.16"
libc      = "0.2.50"
clap      = "2.32.0"
rand_os   = "0.1.3"
byteorder = { version = "1.0.0" }
